--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,8 +13,8 @@ on:
         default: Testing        
 
 jobs:
-  prepare:
-    name: Prepare
+  build-and-test:
+    name: Build & Test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -26,20 +26,6 @@ jobs:
           7.0.x
           8.0.x
           
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    needs: [prepare]
-    steps:
-    - name: Test
-      run: | 
-        echo ls:
-        ls
-        echo --------------------------------------------
-        echo tree:
-        tree
-        echo --------------------------------------------
-        
     - name: Restore dependencies
       run: | 
         dotnet restore dekoeky.hello-world
@@ -48,10 +34,5 @@ jobs:
       run: | 
         dotnet build dekoeky.hello-world --no-restore
         dotnet build dekoeky.hello-world.tests --no-restore
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
     - name: Test
       run: dotnet test --no-build --verbosity normal dekoeky.hello-world.tests
