--- a/dekoeky.hello-world/dekoeky.hello-world.csproj
+++ b/dekoeky.hello-world/dekoeky.hello-world.csproj
@@ -25,6 +25,7 @@
 
     <VersionPrefix>1.0.1</VersionPrefix>
 		<VersionSuffix>alpha</VersionSuffix>
+		<UserSecretsId>5c7a50e3-da32-4a20-a8e7-ba42c44aca64</UserSecretsId>
 	
 
   </PropertyGroup>
