--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,6 +18,7 @@ jobs:
     strategy:
      matrix:
         os: [ubuntu-latest, windows-latest]
+        configuration: [Release]
      
 
     name: Build & Test
@@ -36,9 +37,14 @@ jobs:
       run: | 
         dotnet restore dekoeky.hello-world
         dotnet restore dekoeky.hello-world.tests
+
     - name: Build
       run: | 
-        dotnet build dekoeky.hello-world --no-restore
-        dotnet build dekoeky.hello-world.tests --no-restore
+        dotnet build dekoeky.hello-world --no-restore -c ${{ matrix.configuration }}
+        dotnet build dekoeky.hello-world.tests --no-restore -c ${{ matrix.configuration }}
+
     - name: Test
-      run: dotnet test --no-build --verbosity normal dekoeky.hello-world.tests
+      run: dotnet test --no-build --verbosity normal dekoeky.hello-world.tests -c ${{ matrix.configuration }}
+
+    - name: Print Assembly Versions
+      run: ./script/print-assembly-versions.ps1
