--- a/.github/workflows/cache-example.yml
+++ b/.github/workflows/cache-example.yml
@@ -38,6 +38,7 @@ jobs:
     name: Re-use Cache
     runs-on: ubuntu-latest
     needs: [cache-build]
+    
 
     steps:
       - name: Setup .NET
@@ -51,7 +52,7 @@ jobs:
       - uses: actions/cache@v2
         id: restore-build
         with:
-          path: ./*
+          path: dekoeky.hello-world.tests/bin/Release/*
           key: ${{ github.sha }}
 
       - run: tree
