--- a/.github/workflows/cache-example.yml
+++ b/.github/workflows/cache-example.yml
@@ -61,33 +61,50 @@ jobs:
           dotnet test dekoeky.hello-world.tests/bin/Release/net7.0/dekoeky.hello-world.tests.dll --no-restore --no-build
           dotnet test dekoeky.hello-world.tests/bin/Release/net8.0/dekoeky.hello-world.tests.dll --no-restore --no-build
 
-  # artifact-build:
-  #   name: Build - With Artifact
-  #   runs-on: ubuntu-latest
+  artifact-build:
+    name: Build - With Artifact
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 12
-  #     - run: npm ci
-  #     - run: npm run build
-  #     - uses: actions/upload-artifact@v2
-  #       with:
-  #         name: nextjs-build
-  #         path: ./.next
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: |
+            6.0.x
+            7.0.x
+            8.0.x
+      
+      - name: Restore dependencies
+        run: | 
+          dotnet restore dekoeky.hello-world
 
-  # artifact-use-build:
-  #   name: Re-use Artifact
-  #   runs-on: ubuntu-latest
-  #   needs: [artifact-build]
+      - name: Build
+        run: | 
+          dotnet build dekoeky.hello-world --no-restore -c Release
 
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 12
-  #     - uses: actions/download-artifact@v2
-  #       with:
-  #         name: nextjs-build
-  #     - run: ls .
+      - name: Pack
+        run: | 
+          dotnet pack dekoeky.hello-world --no-restore -c Release
+
+      - run: ls 
+      - run: find . -type f \( -name "*.nupkg" -or -name "*.snupkg  \)
+      - uses: actions/upload-artifact@v2
+        with:
+          name: packages
+          path: | 
+            *.nupkg
+            *.snupkg
+
+  artifact-use-build:
+    name: Re-use Artifact
+    runs-on: ubuntu-latest
+    needs: [artifact-build]
+
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: packages
+      - run: ls .
+      - run: tree .
