--- a/.github/workflows/cache-example.yml
+++ b/.github/workflows/cache-example.yml
@@ -109,10 +109,10 @@ jobs:
       - run: ls .
       - run: tree .
       - run: |
-          dotnet nuget push "*.nupkg" \
-          --skip-duplicate \
-          -s https://api.nuget.org/v3/index.json \
-          --api-key ${{ secrets.NUGET_API_KEY }}
+          dotnet nuget push "**\*.nupkg" \
+            --skip-duplicate \
+            -s https://api.nuget.org/v3/index.json \
+            --api-key ${{ secrets.NUGET_API_KEY }}
 
   upload-github:
     name: Upload to GitHub
@@ -126,7 +126,7 @@ jobs:
       - run: ls .
       - run: tree .
       - run: |
-          dotnet nuget push "*.nupkg" \
-          --skip-duplicate \
-          -s https://nuget.pkg.github.com/dekoeky/index.json \
-          --api-key ${{ secrets.GITHUB_TOKEN }}
+          dotnet nuget push "**\*.nupkg" \
+            --skip-duplicate \
+            -s https://nuget.pkg.github.com/dekoeky/index.json \
+            --api-key ${{ secrets.GITHUB_TOKEN }}
