--- a/.github/workflows/build-and-push-nuget-packages.yml
+++ b/.github/workflows/build-and-push-nuget-packages.yml
@@ -51,6 +51,7 @@ jobs:
     name: Upload to NuGet.org
     runs-on: ubuntu-latest
     needs: [artifact-build]
+    environment: NuGet.org
     steps:
       - uses: actions/download-artifact@v2
         with:
@@ -67,6 +68,7 @@ jobs:
     name: Upload to GitHub
     runs-on: ubuntu-latest
     needs: [artifact-build]
+    environment: GitHub
     permissions: 
       packages: write
     steps:
