add gitversion use ispackable

--- a/dekoeky.hello-world.nuget-consumer/dekoeky.hello-world.nuget-consumer.csproj
+++ b/dekoeky.hello-world.nuget-consumer/dekoeky.hello-world.nuget-consumer.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>dekoeky.hello_world.nuget_consumer</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
