--- a/dekoeky.hello-world.tester/dekoeky.hello-world.tester.csproj
+++ b/dekoeky.hello-world.tester/dekoeky.hello-world.tester.csproj
@@ -14,6 +14,7 @@
     <RootNamespace>dekoeky.hello_world.tester</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
 </Project>
