--- a/dekoeky.hello-world/dekoeky.hello-world.csproj
+++ b/dekoeky.hello-world/dekoeky.hello-world.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <langversion>latest</langversion>
     
+    <IsPackable>true</IsPackable>
 		<Title>dekoeky Hello World</Title>
 		<Authors>Wesley Van Koeckhoven</Authors>
 		<Company>Wesley Van Koeckhoven</Company>
@@ -42,6 +43,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	    <PrivateAssets>all</PrivateAssets>
+	  </PackageReference>
 	  <PackageReference Include="Serilog" Version="3.0.0" />
 	  <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
 	  <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
